# terragraph

./: .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Makefile  README.rst  pyproject.toml  renovate.json  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: drafter.yml  pip-publish.yml  tests.yml
docs/: conf.py  requirements.txt  usage.rst
docs/assets/: graph.dot  graph2.dot
src/terragraph/: __init__.py  _version.py  cli.py  core.py
tests/: conftest.py  test_terragraph_cli.py
tests/core/: test_core.py
