[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "terragraph"
version = "0.3.3"
authors = [{name = "Chris Doyle", email = "uk.chris.doyle+cdsre@gmail.com"}]
license = {text = "MIT license"}
description = "A package to help vizualise output from terraform graph as an svg file"
keywords = ["terragraph"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
urls = {Homepage = "https://github.com/cdsre/terragraph"}
readme = "README.rst"
requires-python = ">=3.6"
dependencies = [
    "Click>=7.0",
    "pydot>=2.0.0"
]

[project.scripts]
terragraph = "terragraph.cli:terragraph_cli"

[project.optional-dependencies]
dev = [
    "pytest>=3",
    "pylint==3.0.3",
    "black==23.12.1",
    "mypy==1.8.0",
    "sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-click==5.1.0",
    "pylint-pytest==1.1.7",
    "tox==4.12.1",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["terragraph"] # terragraph.*
namespaces = false
where = ["src"]

[tool.pylint.message_control]
max-line-length = 150

[tool.pylint.master]
load-plugins = "pylint_pytest"

[tool.isort]
profile = "black"

[tool.tox]
skip_missing_interpreters = true
allowlist_externals = "*"
